--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <button id="rock" onclick="playground('rock',computer())">rock</button>
+    <button id="rock">rock</button>
     <button id="paper" onclick="playground('paper',computer())">paper</button>
     <button id="scissors" onclick="playground('scissors',computer())">scissors</button>
 
@@ -30,20 +30,21 @@
     const scissorsBtn = document.querySelector('#scissors')
 
     function playground(player_choice,computer_choice) {
-      alert(computer_choice);
       if (player_choice == computer_choice) {
 
-        return;
+        return 'draw';
       }
       else if (player_choice == 'rock' && computer_choice == 'scissors' ||
       player_choice == 'paper' && computer_choice == 'rock' ||
       player_choice == 'scissors' &&  computer_choice == 'paper') {
         human_score++
         document.getElementById('humanScore').textContent = human_score;
+        return 'win';
       }
       else {
         computer_score++;
         document.getElementById('computerScore').textContent = computer_score;
+        return 'lose';
       }
 
       if (human_score == 5) {
@@ -53,7 +54,9 @@
         alert('you lose')
       }
     }
-
+    rockBtn.addEventListener('click',function() {
+      console.log(playground('rock','paper'))
+    })
 
 
     </script>
