add result announcement

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           <button id='Rock'><img src="images/rock.png" /></button>
           <h4>Rock</h4>
         </div>
-        <div class="paper">
-          <button id='Paper'><img src='images/paper.png' /></button>
-          <h4>Paper</h4>
-        </div>
         <div class="scissors">
           <button id='Scissors'><img src='images/scissors.png' /></button>
           <h4>Scissors</h4>
+        </div>
+        <div class="paper">
+          <button id='Paper'><img src='images/paper.png' /></button>
+          <h4>Paper</h4>
         </div>
       </div>
       <div class="score-board">
@@ -40,19 +40,30 @@
           <img id='rockCom' src="images/rock.png" />
           <h4>Rock</h4>
         </div>
-        <div class="paper">
-          <img id='paperCom'src='images/paper.png' />
-          <h4>Paper</h4>
-        </div>
         <div class="scissors">
           <img id='scissorsCom' src='images/scissors.png' />
           <h4>Scissors</h4>
+        </div>
+        <div class="paper">
+          <img id='paperCom'src='images/paper.png' />
+          <h4>Paper</h4>
         </div>
       </div>
       <div class="score-board">
         <span id="computerScore">0</span>
       </div>
     </section>
+    </div>
+    <div class="result">
+      <p id='result'></p>
+    </div>
+    <div class="rule">
+      <span>Instruction for Noob</span>
+      <ul>
+        <li>Rock win against scissors</li>
+        <li>Scissors win against paper</li>
+        <li>Paper win against rock</li>
+      </ul>
     </div>
   </div>
   <script src="Js/script.js"></script>
